<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


    <android.support.v7.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="80dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">
                <TextView
                        android:id="@+id/homeNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="@string/team_name"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/homeScoreTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/number"
                        android:textSize="28sp"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vs"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/awayScoreTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/number"
                        android:textSize="28sp"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                <TextView
                        android:id="@+id/awayNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="@string/team_name"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:id="@+id/dateScheduleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/date" />
    </android.support.v7.widget.CardView>
</RelativeLayout>